# VoteR

./: main.py  poll.py  pyproject.toml
cogs/: slash.py
utils/: base_cog.py  constants.py  functions.py
